
FIND_PACKAGE(X11)

PKG_CHECK_MODULES(SDL sdl2 gl)

ADD_LIBRARY(microrender
    microui.c renderer.c
    render_sdl.c render_sdl_main.c
)

SET(MICRORENDER_LIBRARIES)

IF (${SDL_FOUND})
    TARGET_INCLUDE_DIRECTORIES(microrender PRIVATE ${SDL_INCLUDE_DIR})
    TARGET_COMPILE_DEFINITIONS(microrender PRIVATE -DUSE_SDL)
    TARGET_LINK_LIBRARIES(microrender ${SDL_LIBRARIES})
    SET(MICRORENDER_LIBRARIES ${MICRORENDER_LIBRARIES} ${SDL_LIBRARIES})
ENDIF()

IF (${X11_FOUND})
    TARGET_INCLUDE_DIRECTORIES(microrender PRIVATE ${X11_INCLUDE_DIR})
    TARGET_COMPILE_DEFINITIONS(microrender PRIVATE -DUSE_X11)
    SET(MICRORENDER_LIBRARIES ${X11_LIBRARIES})
    TARGET_LINK_LIBRARIES(microrender ${MICRORENDER_LIBRARIES} ${X11_LIBRARIES})
ENDIF()


ADD_EXECUTABLE(mcgui_test main.cpp)
TARGET_LINK_LIBRARIES(mcgui_test microrender)

